--- a/src/app/portal-access/portal-access.html
+++ b/src/app/portal-access/portal-access.html
@@ -73,7 +73,9 @@
               <input type="password" class="form-control"  autocomplete="off" ng-required="true" name="password" ng-model="loginData.password">
             </div>
             <div class="form-group">
-              <input type="submit" type="submit" ng-click="portalLogin()" value="Update" class="btn sign_mybtn all-btn primary-btn">
+              <button type="submit" type="submit"  ng-click="portalLogin()"  class="btn sign_mybtn all-btn primary-btn">
+                <span btn-load-indicator="PortalAccess:Process">Update</span>
+              </button>
             </div>
           </form>
         </div>
