--- a/src/app/select-customer/select-customer.html
+++ b/src/app/select-customer/select-customer.html
@@ -6,7 +6,7 @@
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right my-bottm-line dash_board_tit job-site-list">
       <div>
         <div class="form-control search-div quotes-search hidden-xs searchShow">
-          <input type="text" placeholder="Search Customer" ng-model="query">
+          <input type="text" placeholder="Search Customer" ng-model="query" ng-change="searchCustomer()">
         </div>
       </div>
     </div>
@@ -24,18 +24,19 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="customer in portalCustomerList | filter : query">
+        <tr ng-repeat="customer in portalCustomerList | limitTo:15:flags.cursor">
           <td>{{customer.CustomerNO}}</td>
           <td>{{customer.CustomerName}}</td>
           <td>{{customer.Phone}}</td>
           <td>{{customer.Email}}</td>
           <td class="text-right">
-            <a   class="invoice-no view-down"><span style="margin-right: 5px;">Assign</span><i class="fa fa-arrow-circle-o-right invoice-no heading-text"></i></a>
+            <a   class="invoice-no view-down" ng-click="assignCustomer(customer)"><span style="margin-right: 5px;">Assign</span><i class="fa fa-arrow-circle-o-right invoice-no heading-text"></i></a>
 
           </td>
         </tr>
         </tbody>
       </table>
+      <uib-pagination  total-items="portalCustomerList.length" ng-model="flags.page"  ng-change="pageChange()" items-per-page="flags.noOfRecords" rotate="false" boundary-link-numbers="true" force-ellipses="true"></uib-pagination>
     </div>
   </div>
 </div>
