--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -91,6 +91,7 @@
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#/orders/history">Recent Orders</a></li>
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1"  >Purchases</a></li>
             <li role="presentation"class="list-group-item noborder" ng-if="!userObj.portal_login"><a class="nopadding" role="menuitem" tabindex="-1" ui-sref="hm.portalAccess">Get Portal Access</a></li>
+            <li role="presentation"class="list-group-item noborder" ng-if="userObj.portal_login && userObj.user_type == 2"><a class="nopadding" role="menuitem" tabindex="-1" ui-sref="hm.selectCustomer">Select Customer</a></li>
 
             <!-- <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" ui-sref="hm.userProfile" tabindex="-1" href="/#/profile">My Profile</a></li> -->
             <li role="presentation" class="list-group-item"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/user/profile">Profile Settings</a></li>
